[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tspsolver"
authors = [
  {name = "Roopkumar Das", email = "roopkumards@gmail.com"},
]
version = "0.1.1"
description = "Solve tsp problem with optimization strategies"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["2-opt", "simulated annealing", "hill climbing", "random restart", "travelling salesman problem", "python"]
classifiers = [
  "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/RoopkumarD/tspsolver"
Repository = "https://github.com/RoopkumarD/tspsolver"
Issues = "https://github.com/RoopkumarD/tspsolver/issues"
